	* Add resolution option to transcode action.
	* Simplify simple H264 transcoding profile.
	* Use 16/9 as default display aspect ratio for HD files in trancode
	  action.
	* Fix display aspect ratio override in transcode action.
	* Add toolbox2-transcode tool.
	* Trigger action _callback after worker execution.
	* Switch thumbnail generation to scene detect filter.

Version 0.7.0 Released on 2012/11/23

	* Add audio_format property to AVInfo class.
	* Try to keep input audio format in transcode action.
	* Rename and use sample_rate option in transcode action.
	* Add audio bitrate option to transcode action.
	* Add gop_size option to MPEG2/XDCAMHD transcoding profiles.
	* Add gop_size option to transcode action.
	* Support more DNxHD transcoding profiles in ffmpeg worker.
	* Add interlaced option to transcode action.
	* Add closed_gop option to MPEG2/XDCAMHD transcoding profiles.
	* Add closed_gop option to transcode action.
	* Support demuxing of DNxHD essences in ffmpeg worker.
	* Read fps value from ffmpeg output.
	* Support BMX muxer.
	* Handle interlaced option in XDCAMHD transcoding profile.
	* Update XDCAMHD transcoding profile options in ffmpeg worker.
	* Set field dominance in XDCAMHD transcoding profile.
	* Add decoding|encoding_threads options to transcode action.

Version 0.6.0 Released on 2012/08/06

	* Implement _setup method in parent class (Worker).
	* AVInfo class code cleanup.
	* Ignore empty string as argument value in Worker.get_args.
	* Add worker configuration system, closes: #5764.
	* Update ffmpeg worker API.
	* Make ffmpeg worker override output files by default.
	* Add set_timecode method to ffmpeg worker.
	* Support demuxing in ffmpeg worker.
	* Remove dependency on sjfs from manzanita rewrap action, closes: #5758.
	* Refactor manzanita rewrap action and remove dependency over mediaparser.
	* Support video copy in ffmpeg worker, refs: #5763.
	* Add set_aspect_ratio to ffmpeg worker, refs: #5763.