@@ -11,6 +11,7 @@ Version 0.8.0~dev
 	* Add toolbox2-transcode tool.
 	* Trigger action _callback after worker execution.
 	* Switch thumbnail generation to scene detect filter.
+	* Add width option to make_thumbnail method in ffmpeg worker.
 
 Version 0.7.0 Released on 2012/11/23
 
